--- a/themes/rocinante-2/layouts/partials/header.html
+++ b/themes/rocinante-2/layouts/partials/header.html
@@ -4,6 +4,6 @@
   </h2>
 {{ else }}
   <h2>
-    <a class="site-title" href="{{ .Site.BaseURL }}">{{ .Site.Title }} <</a>
+    <a class="site-title" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
   </h2>
 {{ end }}
