--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    gap: 4px;
 }
 .content center span {
     font-size: 12px;
