--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
     flex-direction: column;
     gap: 4px;
 }
+.content center img {
+    max-width: 88%;
+}
 .content center span {
     font-size: 12px;
     color: #646464;
