--- a/themes/rocinante-2/layouts/partials/listcontent.html
+++ b/themes/rocinante-2/layouts/partials/listcontent.html
@@ -5,10 +5,11 @@
         <div class="title-group-solo">
             <a href="{{ .RelPermalink }}">
             {{ if eq .Type "photos" }}
-                <span class="date">{{ .Params.date.Format "2006 Jan" }}</span>
+                <span class="date">{{ .Params.date.Format "2006 Jan 02" }}</span>
                 <span class="label">&nbsp;📸&nbsp;</span>
             {{ else }}
                 <span class="date">{{ .Params.date.Format "2006 Jan 02" }}</span>
+                <span class="label">&nbsp;📖&nbsp;</span>
             {{ end }}
             <span class="title">
                 <h3>
