--- a/themes/rocinante-2/layouts/index.html
+++ b/themes/rocinante-2/layouts/index.html
@@ -8,6 +8,6 @@
     {{ end }}
     <hr>
 
-    {{- partial "listcontent.html" . -}}
-    {{- partial "pagination.html" . -}}
+    <!-- {{- partial "listcontent.html" . -}} -->
+    <!-- {{- partial "pagination.html" . -}} -->
 {{ end }}
