--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,26 @@
     opacity: 0;
 }
 
+.sway {
+  user-select: none;
+  text-decoration: none;
+  border: none;
+  background: var(--gradient);
+  background-clip: text;
+  background-size: 200% auto;
+  color: transparent !important;
+  display: inline-block;
+  animation: shine 1s linear 1;
+  
+  &:hover {
+      animation: shine 1s linear infinite;
+  }
+
+  &:active {
+    color: #00000055 !important;
+  }
+}
+
 /* .site-title {
     background: var(--gradient);
     background-clip: text;
