--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,10 @@
   background-size: 200% auto;
   color: transparent !important;
   display: inline-block;
-  animation: shine 1s linear infinite;
+  animation: 
+    shine 1s linear infinite,
+    sway 0.65s ease-in-out infinite normal;
+
 
   &:active {
     color: #00000055 !important;
